syntax = "proto2";
package service1;

message Request1 {
    optional int32 no = 1;       //消息编号
    optional int32 session = 2;  //消息序号

    optional string request = 5;

}

message Response1 {
    optional int32 no = 1;
    optional int32 session = 2;

    optional string response = 5;
}


//rpc 服务间转发
service RPCService {
    rpc request (Request1) returns (Response1) {}
}
